force-app/main/default/objects/Pricebook2/fields/Price_Book_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Type__c</fullName>
    <label>Price Book Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Specific</fullName>
            </value>
            <value>
                <fullName>Region Specific</fullName>
            </value>
            <value>
                <fullName>Promotional Price</fullName>
            </value>
            <value>
                <fullName>Dealer Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>